crates/aura-macros/tests/boundaries/missing_namespace.stderr
error: Choreography is missing a namespace. Add `module <name> exposing (...)` to your .tell file or use #[namespace = "unique_name"] inside the tell! macro. Each choreography in the same file must have a unique namespace.
 --> tests/boundaries/missing_namespace.rs:3:1
  |
3 | / tell!(r#"
4 | | protocol MissingNamespace =
5 | |   roles Alice, Bob
6 | |   Alice -> Bob : Message
7 | | "#);
  | |___^
  |
  = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0255]: the name `Message` is defined multiple times
 --> tests/boundaries/missing_namespace.rs:3:1
  |
3 | / tell!(r#"
4 | | protocol MissingNamespace =
5 | |   roles Alice, Bob
6 | |   Alice -> Bob : Message
7 | | "#);
  | |___^ `Message` redefined here
  |
  = note: `Message` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
7 | "#) as OtherMessage;
  |     +++++++++++++++
